--- a/recipes.html
+++ b/recipes.html
@@ -181,7 +181,9 @@ nav img {
                     <p>A small, intense shot of concentrated coffee provides a rich, bold taste.</p>
                 </div>
                 <div class="preview-col">
+                    <a target="_blank" href="recipe3.html">
                     <img src="../CoffeeVere/img/mocha.jpg">
+                    </a>
                     <h3>Caffè Mocha</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
                 </div>
