--- a/recipe3.html
+++ b/recipe3.html
@@ -156,7 +156,7 @@ nav img {
                         <p>Instructions: <br> Pull an espresso shot. <br> Steam milk and pour it over the espresso. <br> Top with a thin layer of microfoam and enjoy.</p>
                </div>
                     <div class="r1-col">
-                    <img src="../CoffeeVere/img/la.jpg" alt="Latte photo">
+                    <img src="../CoffeeVere/img/mocha.jpg" alt="Mocha photo">
                 </div>
             </div>
         </section>
