--- a/recipe3.html
+++ b/recipe3.html
@@ -152,8 +152,8 @@ nav img {
             <div class="row">
                 <div class ="r1-col">
                     <h1>How to make a caffè mocha</h1>
-                    <p>Ingredients: <br> 1 shot espresso <br> 6 oz steamed milk <br> 1 oz milk foam <p> <br>
-                        <p>Instructions: <br> Pull an espresso shot. <br> Steam milk and pour it over the espresso. <br> Top with a thin layer of microfoam and enjoy.</p>
+                    <p>Ingredients: <br> 1 shot espresso <br> 2 tbsp hot chocolate or cocoa powder <br> 6 oz steamed milk <br> Whipped cream (optional) </p> <br> 
+                    <p>Instructions: <br> Mix hot chocolate powder with espresso. <br> Add steamed milk and stir well. <br> Top with whipped cream and chocolate shavings for a decadent finish. </p>
                </div>
                     <div class="r1-col">
                     <img src="../CoffeeVere/img/mocha.jpg" alt="Mocha photo">
