--- a/recipe2.html
+++ b/recipe2.html
@@ -153,7 +153,8 @@ nav img {
                 <div class ="r1-col">
                     <h1>How to make an espresso</h1>
                     <p>Ingredients: <br> 18–20g finely ground coffee <br> 1.5 ounces hot water (195-205°F) </p> <br>
-                    <p>Use an espresso machine to extract a rich, crema-topped shot in 25–30 seconds. <br> Enjoy as-is or use it as a base for lattes, cappuccinos, and more</p>
+                    <p>Use an espresso machine to extract a rich, crema-topped shot in 25–30 seconds. <br> Enjoy as-is or use it as a base for lattes, cappuccinos, and more</p> <br> <br> <br>
+                    <a href="https://youtu.be/SSE-3sPJsOM?si=u8Jx9qk9nRX2jaWx" class="hero-btn">Video Tutorial</a>
                     <div class="r1-col">
                     <img src="../CoffeeVere/img/espresso.jpg" alt="Espresso photo">
                 </div>
