--- a/recipe2.html
+++ b/recipe2.html
@@ -111,6 +111,25 @@ nav img {
     margin-left: 40px;
 }
 
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 24px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.hero-btn:hover{
+    border: 1px solid #5C0B12;
+    background: #5C0B12;
+    transition: 1s;
+}
+
 .footer {
     width: 100%;
     text-align: center;
