--- a/recipe2.html
+++ b/recipe2.html
@@ -105,10 +105,10 @@ nav img {
 }
 
 .r1-col img {
-    width: 500px;
-    height: 600px;
+    width: 100%;
+    max-width: 500px;
+    height: auto
     border-radius: 12px;
-    margin-left: 40px;
 }
 
 .hero-btn {
@@ -172,7 +172,7 @@ nav img {
                 <div class ="r1-col">
                     <h1>How to make an espresso</h1>
                     <p>Ingredients: <br> 18–20g finely ground coffee <br> 1.5 ounces hot water (195-205°F) </p> <br>
-                    <p>Use an espresso machine to extract a rich, crema-topped shot in 25–30 seconds. <br> Enjoy as-is or use it as a base for lattes, cappuccinos, and more</p> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <p>Use an espresso machine to extract a rich, crema-topped shot in 25–30 seconds. <br> Enjoy as-is or use it as a base for lattes, cappuccinos, and more</p>
                     <div class="r1-col">
                     <img src="../CoffeeVere/img/espresso.jpg" alt="Espresso photo">
                     <a href="https://youtu.be/SSE-3sPJsOM?si=u8Jx9qk9nRX2jaWx" class="hero-btn">Video Tutorial</a>
