--- a/recipe2.html
+++ b/recipe2.html
@@ -105,10 +105,10 @@ nav img {
 }
 
 .r1-col img {
-    width: 100%;
-    max-width: 500px;
-    height: auto
+    width: 500px;
+    height: 600px;
     border-radius: 12px;
+    margin-left: 40px;
 }
 
 .hero-btn {
