--- a/recipe2.html
+++ b/recipe2.html
@@ -171,10 +171,9 @@ nav img {
             <div class="row">
                 <div class ="r1-col">
                     <h1>How to make an espresso</h1>
-                    <p>Ingredients: <br> 18–20g finely ground coffee <br> 1.5 ounces hot water (195-205°F) </p> <br>
-                    <p>Use an espresso machine to extract a rich, crema-topped shot in 25–30 seconds. <br> Enjoy as-is or use it as a base for lattes, cappuccinos, and more</p>
                     <p>Ingredients: <br> 1 shot espresso <br> 2 tbsp hot chocolate or cocoa powder <br> 6 oz steamed milk <br> Whipped cream (optional) </p> <br> 
                     <p>Instructions: <br> Mix hot chocolate powder with espresso. <br> Add steamed milk and stir well. <br> Top with whipped cream and chocolate shavings for a decadent finish. </p>
+               </div>
                     <div class="r1-col">
                     <img src="../CoffeeVere/img/espresso.jpg" alt="Espresso photo">
                     <a href="https://youtu.be/SSE-3sPJsOM?si=u8Jx9qk9nRX2jaWx" class="hero-btn">Video Tutorial</a>
