--- a/recipe1.html
+++ b/recipe1.html
@@ -111,6 +111,25 @@ nav img {
     margin-left: 40px;
 }
 
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 24px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.hero-btn:hover{
+    border: 1px solid #5C0B12;
+    background: #5C0B12;
+    transition: 1s;
+}
+
 .footer {
     width: 100%;
     text-align: center;
@@ -154,6 +173,7 @@ nav img {
                     <h1>How to make a caffè latte</h1>
                     <p>Ingredients: <br> 1 shot espresso <br> 6 oz steamed milk <br> 1 oz milk foam <p> <br>
                         <p>Instructions: <br> Pull an espresso shot. <br> Steam milk and pour it over the espresso. <br> Top with a thin layer of microfoam and enjoy.</p>
+                        <a href="https://youtu.be/UxwscVIZ8Qg?si=_rHIYwIr6fDmfg7R" class="hero-btn">Video Tutorial</a>
                </div>
                     <div class="r1-col">
                     <img src="../CoffeeVere/img/la.jpg" alt="Latte photo">
