--- a/recipe2.html
+++ b/recipe2.html
@@ -171,7 +171,7 @@ nav img {
             <div class="row">
                 <div class ="r1-col">
                     <h1>How to make an espresso</h1>
-                    <p>Ingredients: <br> 18–20g finely ground coffee <br> 1.5 ounces hot water (195-205°F </p> <br> 
+                    <p>Ingredients: <br> 18–20g finely ground coffee <br> 1.5 ounces hot water (195-205°F) </p> <br> 
                     <p>Instructions: <br> Use an espresso machine to extract a rich, crema-topped shot in 25–30 seconds. <br> Enjoy as-is or use it as a base for lattes, cappuccinos, and more. </p>
                     <a href="https://youtu.be/SSE-3sPJsOM?si=u8Jx9qk9nRX2jaWx" class="hero-btn">Video Tutorial</a>
                </div>
