--- a/recipe3.html
+++ b/recipe3.html
@@ -111,6 +111,25 @@ nav img {
     margin-left: 40px;
 }
 
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 24px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.hero-btn:hover{
+    border: 1px solid #5C0B12;
+    background: #5C0B12;
+    transition: 1s;
+}
+
 .footer {
     width: 100%;
     text-align: center;
@@ -154,6 +173,7 @@ nav img {
                     <h1>How to make a caffè mocha</h1>
                     <p>Ingredients: <br> 1 shot espresso <br> 2 tbsp hot chocolate or cocoa powder <br> 6 oz steamed milk <br> Whipped cream (optional) </p> <br> 
                     <p>Instructions: <br> Mix hot chocolate powder with espresso. <br> Add steamed milk and stir well. <br> Top with whipped cream and chocolate shavings for a decadent finish. </p>
+                    <a href="https://youtu.be/aEHBmi1927g?si=e9GSpTeA9WsNKIic" class="hero-btn">Video Tutorial</a>
                </div>
                     <div class="r1-col">
                     <img src="../CoffeeVere/img/mocha.jpg" alt="Mocha photo">
