--- a/recipes.html
+++ b/recipes.html
@@ -123,6 +123,17 @@ nav img {
     text-align: left;
 }
 
+.fave {
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)), url("../CoffeeVere/img/bg.jpg");
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+}
+
 .footer {
     width: 100%;
     text-align: center;
@@ -189,6 +200,10 @@ nav img {
                 </div>
             </div>
             </div>
+        </section>
+
+        <section class="fave">
+            <h1>Personal Favorite</h1>
         </section>
 
         <section class="footer">
