--- a/recipes.html
+++ b/recipes.html
@@ -126,7 +126,7 @@ nav img {
 .fave {
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)), url("../CoffeeVere/img/bg.jpg");
+    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)), url("../CoffeeVere/img/banner.jpg");
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -203,7 +203,9 @@ nav img {
         </section>
 
         <section class="fave">
+            <a target="_blank" href="recipe3.html">
             <h1>Personal Favorite</h1>
+            </a>
         </section>
 
         <section class="footer">
