--- a/recipes.html
+++ b/recipes.html
@@ -133,6 +133,26 @@ nav img {
     text-align: center;
     padding: 100px 0;
     color: #fff;
+    font-size: 25px;
+}
+
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 24px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.hero-btn:hover{
+    border: 1px solid #5C0B12;
+    background: #5C0B12;
+    transition: 1s;
 }
 
 .footer {
@@ -204,9 +224,7 @@ nav img {
         </section>
 
         <section class="fave">
-            <a target="_blank" href="recipe3.html">
-            <h1>Personal Favorite</h1>
-            </a>
+            <a href="https://youtu.be/aEHBmi1927g?si=e9GSpTeA9WsNKIic" class="hero-btn">Personal Favorite</a>
         </section>
 
         <section class="footer">
