--- a/recipes.html
+++ b/recipes.html
@@ -224,7 +224,9 @@ nav img {
         </section>
 
         <section class="fave">
-            <a href="https://youtu.be/aEHBmi1927g?si=e9GSpTeA9WsNKIic" class="hero-btn">Personal Favorite</a>
+            
+            <h1>Personal Favorite</h1>
+
         </section>
 
         <section class="footer">
