--- a/recipes.html
+++ b/recipes.html
@@ -124,6 +124,7 @@ nav img {
 }
 
 .fave {
+    position: relative;
     margin: 100px auto;
     width: 80%;
     background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)), url("../CoffeeVere/img/banner.jpg");
@@ -134,25 +135,20 @@ nav img {
     padding: 100px 0;
     color: #fff;
     font-size: 25px;
+    overflow: hidden;
 }
 
-.hero-btn {
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    border: 1px solid white;
-    padding: 12px 34px;
-    font-size: 24px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
-    margin-top: 20px;
+.fave-link {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    z-index: 2;
+    text-indent: -9999px;
 }
 
-.hero-btn:hover{
-    border: 1px solid #5C0B12;
-    background: #5C0B12;
-    transition: 1s;
+.fave h1 {
+    position:relative;
+    z-index: 3;
 }
 
 .footer {
@@ -224,9 +220,8 @@ nav img {
         </section>
 
         <section class="fave">
-            
+            <a href="recipe2.html" class="fave-link"></a>
             <h1>Personal Favorite</h1>
-
         </section>
 
         <section class="footer">
