--- a/recipes.html
+++ b/recipes.html
@@ -220,8 +220,9 @@ nav img {
         </section>
 
         <section class="fave">
-            <a href="recipe2.html" class="fave-link"></a>
+            <a href="recipe2.html" class="fave-link">
             <h1>Personal Favorite</h1>
+            </a>
         </section>
 
         <section class="footer">
