--- a/recipes.html
+++ b/recipes.html
@@ -127,7 +127,7 @@ nav img {
     position: relative;
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)), url("../CoffeeVere/img/banner.jpg");
+    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)), url("../CoffeeVere/img/bb.jpg");
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -220,7 +220,7 @@ nav img {
         </section>
 
         <section class="fave">
-            <a href="recipe2.html" class="fave-link">
+            <a href="personalfave.html" class="fave-link">
             <h1>Personal Favorite</h1>
             </a>
         </section>
