--- a/recipes.html
+++ b/recipes.html
@@ -127,7 +127,7 @@ nav img {
     position: relative;
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)), url("../CoffeeVere/img/ba.jpg");
+    background-image: linear-gradient(rgba(122, 133, 174, 0.7),rgba(73, 81, 110, 0.7)), url("../CoffeeVere/img/b.jpg");
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -220,9 +220,9 @@ nav img {
         </section>
 
         <section class="fave">
-            <a href="personalfave.html" class="fave-link">
+            <a href="personalfave.html" class="fave-link"></a>
             <h1>Personal Favorite</h1>
-            </a>
+            
         </section>
 
         <section class="footer">
