--- a/recipes.html
+++ b/recipes.html
@@ -220,7 +220,7 @@ nav img {
         </section>
 
         <section class="fave">
-            <a href="personalfave.html" class="fave-link"></a>
+            <a href="personalfave.html" class="fave-link">Go to recipe</a>
             <h1>Personal Favorite</h1>
             
         </section>
