--- a/recipes.html
+++ b/recipes.html
@@ -151,6 +151,25 @@ nav img {
     z-index: 3;
 }
 
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 24px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.hero-btn:hover{
+    border: 1px solid #5C0B12;
+    background: #5C0B12;
+    transition: 1s;
+}
+
 .footer {
     width: 100%;
     text-align: center;
@@ -221,8 +240,7 @@ nav img {
 
         <section class="fave">
             <a href="personalfave.html" class="fave-link">Go to recipe</a>
-            <h1>Personal Favorite</h1>
-            
+            <a href="recipes.html" class="hero-btn"><h1>Personal Favorite</h1></a>
         </section>
 
         <section class="footer">
