--- a/personalfave.html
+++ b/personalfave.html
@@ -164,15 +164,15 @@ nav img {
                 </div>
             </nav>
 
-        <h1>Caffè Mocha</h1>
+        <h1>Personal Favorite <br> Iced Caramel Macchiato/h1>
             
         </section>
         <section class="r1">
             <div class="row">
                 <div class ="r1-col">
-                    <h1>How to make a caffè mocha</h1>
-                    <p>Ingredients: <br> 1 shot espresso <br> 2 tbsp hot chocolate or cocoa powder <br> 6 oz steamed milk <br> Whipped cream (optional) </p> <br> 
-                    <p>Instructions: <br> Mix hot chocolate powder with espresso. <br> Add steamed milk and stir well. <br> Top with whipped cream and chocolate shavings for a decadent finish. </p>
+                    <h1>How to make a homemade version of Starbucks' Iced Caramel Macchiato</h1>
+                    <p>Ingredients: <br> 2 tsp. vanilla syrup or to taste <br> 6 oz. milk <br> 6 oz steamed milk <br> 1 oz espresso <br> caramel sauce to drizzle <br> ice </p> <br> 
+                    <p>Instructions: <br> Add vanilla syrup to the cup first, then milk, ice and espresso on top. <br> Drizzle with caramel sauce. <br> Enjoy!</p>
                     <a href="https://youtu.be/aEHBmi1927g?si=e9GSpTeA9WsNKIic" class="hero-btn">Video Tutorial</a>
                </div>
                     <div class="r1-col">
