--- a/recipes.html
+++ b/recipes.html
@@ -240,7 +240,7 @@ nav img {
 
         <section class="fave">
             <a href="personalfave.html" class="fave-link">Go to recipe</a>
-            <a href="recipes.html" class="hero-btn"><h1>Personal Favorite</h1></a>
+            <a href="personalfave.html" class="hero-btn"><h1>Personal Favorite</h1></a>
         </section>
 
         <section class="footer">
