--- a/personalfave.html
+++ b/personalfave.html
@@ -164,7 +164,8 @@ nav img {
                 </div>
             </nav>
 
-        <h1>Personal Favorite <br> Iced Caramel Macchiato/h1>
+        <h1>Personal Favorite</h1>
+        <h3>Iced Caramel Macchiato</h3>
             
         </section>
         <section class="r1">
