--- a/personalfave.html
+++ b/personalfave.html
@@ -165,19 +165,19 @@ nav img {
             </nav>
 
         <h1>Personal Favorite</h1>
-        <h3>Iced Caramel Macchiato</h3>
+        <h2>Iced Caramel Macchiato</h2>
             
         </section>
         <section class="r1">
             <div class="row">
                 <div class ="r1-col">
                     <h1>How to make a homemade version of Starbucks' Iced Caramel Macchiato</h1>
-                    <p>Ingredients: <br> 2 tsp. vanilla syrup or to taste <br> 6 oz. milk <br> 6 oz steamed milk <br> 1 oz espresso <br> caramel sauce to drizzle <br> ice </p> <br> 
-                    <p>Instructions: <br> Add vanilla syrup to the cup first, then milk, ice and espresso on top. <br> Drizzle with caramel sauce. <br> Enjoy!</p>
-                    <a href="https://youtu.be/aEHBmi1927g?si=e9GSpTeA9WsNKIic" class="hero-btn">Video Tutorial</a>
+                    <p>Ingredients: <br> 2 tsp. vanilla syrup or to taste <br> 6 oz. milk <br> 6 oz steamed milk <br> 1 oz espresso <br> Caramel sauce to drizzle <br> Ice <br> Whipped cream (optional) </p> <br> 
+                    <p>Instructions: <br> Add vanilla syrup to the cup first, then milk, ice and espresso on top. <br> Drizzle with caramel sauce. <br> Top with whipped cream (optional) <br> Enjoy!</p>
+                    <a href="https://youtu.be/zH4ZqhxKjYc?si=iiaiUkwSkKxyMt8F" class="hero-btn">Video Tutorial</a>
                </div>
                     <div class="r1-col">
-                    <img src="../CoffeeVere/img/mocha.jpg" alt="Mocha photo">
+                    <img src="../CoffeeVere/img/cm.jpg" alt="ICM photo">
                 </div>
             </div>
         </section>
