--- a/personalfave.html
+++ b/personalfave.html
@@ -171,7 +171,7 @@ nav img {
         <section class="r1">
             <div class="row">
                 <div class ="r1-col">
-                    <h1>How to make a homemade version of Starbucks' Iced Caramel Macchiato</h1>
+                    <h1>How to make a homemade version of Starbucks Iced Caramel Macchiato</h1>
                     <p>Ingredients: <br> 2 tsp. vanilla syrup or to taste <br> 6 oz. milk <br> 6 oz steamed milk <br> 1 oz espresso <br> Caramel sauce to drizzle <br> Ice <br> Whipped cream (optional) </p> <br> 
                     <p>Instructions: <br> Add vanilla syrup to the cup first, then milk, ice and espresso on top. <br> Drizzle with caramel sauce. <br> Top with whipped cream (optional) <br> Enjoy!</p>
                     <a href="https://youtu.be/zH4ZqhxKjYc?si=iiaiUkwSkKxyMt8F" class="hero-btn">Video Tutorial</a>
