--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ nav img {
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="tips.html">TIPS</a></li>
                         <li><a href="recipes.html">RECIPES</a></li>
-                        <li><a href="">REFERENCES</a></li>
+                        <li><a href="references.html">REFERENCES</a></li>
                     </ul>
                 </div>
             </nav>
