--- a/references.html
+++ b/references.html
@@ -198,9 +198,9 @@ nav img {
                     <ul>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
-                        <li><a href="">TIPS</a></li>
+                        <li><a href="tips.html">TIPS</a></li>
                         <li><a href="recipes.html">RECIPES</a></li>
-                        <li><a href="">FAQS</a></li>
+                        <li><a href="references.html">REFERENCES</a></li>
                     </ul>
                 </div>
             </nav>
