--- a/references.html
+++ b/references.html
@@ -91,85 +91,6 @@ nav img {
     gap: 20px; 
 }
 
-.preview-col {
-    flex: 1 1 30%; 
-    border-radius: 10px;
-    margin-bottom: 20px;
-    text-align: center; 
-}
-
-.preview-col img {
-    width: 100%; 
-    height: 600px; 
-    border-radius: 10px;
-}
-
-.preview h1 { 
-    margin-bottom: 10px; 
-    font-size: 35px;
-}
-
-.preview-col h3 {
-    margin-top: 15px;  
-    margin-bottom: 10px; 
-    font-size: 24px;
-    text-align: left;
-}
-
-.preview-col p {
-    margin-top: 0;
-    font-size: 16px;
-    line-height: 1.5;
-    text-align: left;
-}
-
-.fave {
-    position: relative;
-    margin: 100px auto;
-    width: 80%;
-    background-image: linear-gradient(rgba(56, 67, 113, 0.7),rgba(111, 127, 188, 0.7)), url("../CoffeeVere/img/o.jpg");
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
-    text-align: center;
-    padding: 100px 0;
-    color: #fff;
-    font-size: 25px;
-    overflow: hidden;
-}
-
-.fave-link {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    z-index: 2;
-    text-indent: -9999px;
-}
-
-.fave h1 {
-    position:relative;
-    z-index: 3;
-}
-
-.hero-btn {
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    border: 1px solid white;
-    padding: 12px 34px;
-    font-size: 24px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
-    margin-top: 20px;
-}
-
-.hero-btn:hover{
-    border: 1px solid #5C0B12;
-    background: #5C0B12;
-    transition: 1s;
-}
-
 .footer {
     width: 100%;
     text-align: center;
@@ -205,43 +126,16 @@ nav img {
                 </div>
             </nav>
 
-        <h1>Recipes</h1>
+        <h1>References</h1>
             
         </section>
 
         <section class="preview">
-            <h1>Classics</h1>
-            <p>Click the images for more info!</p>
-            <div class="roww">
-                <div class="preview-col">
-                    <a target="_blank" href="recipe1.html">
-                    <img src="../CoffeeVere/img/la.jpg">
-                    </a>
-                    <h3>Caffè Latte</h3>
-                    <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
-                </div>
-                <div class="preview-col">
-                    <a target="_blank" href="recipe2.html">
-                    <img src="../CoffeeVere/img/espresso.jpg">
-                    </a>
-                    <h3>Espresso</h3>
-                    <p>A small, intense shot of concentrated coffee provides a rich, bold taste.</p>
-                </div>
-                <div class="preview-col">
-                    <a target="_blank" href="recipe3.html">
-                    <img src="../CoffeeVere/img/mocha.jpg">
-                    </a>
-                    <h3>Caffè Mocha</h3>
-                    <p>A creamy blend of coffee and cocoa topped with foam.</p>
-                </div>
-            </div>
-            </div>
+            <p>(2025). Pinimg.com. </p>
+            <a href="https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg">https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg</a>
+
         </section>
 
-        <section class="fave">
-            <a href="personalfave.html" class="fave-link">Go to recipe</a>
-            <a href="personalfave.html" class="hero-btn"><h1>Personal Favorite</h1></a>
-        </section>
 
         <section class="footer">
             <h4>CoffeeVerse ☕︎</h4>
