--- a/references.html
+++ b/references.html
@@ -76,20 +76,26 @@ nav img {
     font-size: 60px;
 }
 
-.preview {
+.references {
     width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px;
-    color: white;
-}
+    margin: 50px auto;
+    }
 
-.roww {
-    display: flex;
-    justify-content: space-between; 
-    flex-wrap: wrap; 
-    gap: 20px; 
-}
+.references h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #9DAC95;
+    padding-bottom: 10px;
+    }
+
+.references ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    }
+
+.references ul li {
+    margin-bottom: 12px;
+    }
 
 .footer {
     width: 100%;
@@ -130,12 +136,13 @@ nav img {
             
         </section>
 
-        <section class="preview">
-            <p>(2025). Pinimg.com. </p>
-            <a href="https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg">https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg</a>
-
+        <section class="references">
+        <h2>Sources</h2>
+        <ul>
+            <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg" target="_blank" style="color:#FFD700;">https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg</a>
+            </li>
+        </ul>
         </section>
-
 
         <section class="footer">
             <h4>CoffeeVerse ☕︎</h4>
