--- a/references.html
+++ b/references.html
@@ -79,23 +79,24 @@ nav img {
 .references {
     width: 80%;
     margin: 50px auto;
-    }
+    color: #fff;
+}
 
 .references h2 {
     font-size: 28px;
     margin-bottom: 20px;
     border-bottom: 2px solid #9DAC95;
     padding-bottom: 10px;
-    }
+}
 
 .references ul {
     list-style-type: disc;
     padding-left: 20px;
-    }
+}
 
 .references ul li {
     margin-bottom: 12px;
-    }
+}
 
 .footer {
     width: 100%;
@@ -139,7 +140,7 @@ nav img {
         <section class="references">
         <h2>Sources</h2>
         <ul>
-            <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg" target="_blank" style="color:#FFD700;">https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg</a>
+            <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg" target="_blank" style="color:#A66253;">https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg</a>
             </li>
         </ul>
         </section>
