--- a/references.html
+++ b/references.html
@@ -140,8 +140,9 @@ nav img {
         <section class="references">
         <h2>Sources</h2>
         <ul>
-            <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg" target="_blank" style="color:#A66253;">https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg</a>
-            </li>
+            <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg</a></li>
+            <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/736x/6d/16/9d/6d169d1c2d18d9b0ee705b59f3bbb3ef.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/736x/6d/16/9d/6d169d1c2d18d9b0ee705b59f3bbb3ef.jpg</a></li>
+            <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/736x/47/3e/ae/473eae8b873459c74640e000ae085b9a.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/736x/47/3e/ae/473eae8b873459c74640e000ae085b9a.jpg</a></li>
         </ul>
         </section>
 
