--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ nav img {
             <h1>Classics</h1>
             <div class="roww">
                 <div class="preview-col">
-                    <img src="../CoffeeVere/img/la.jpg">
+                    <img src="../CoffeeVere/img/l.jpg">
                     <h3>Caffè Latte</h3>
                     <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
