--- a/references.html
+++ b/references.html
@@ -143,6 +143,8 @@ nav img {
             <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/1200x/17/59/c9/1759c9d02a4c3edb398c986e42629148.jpg</a></li>
             <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/736x/6d/16/9d/6d169d1c2d18d9b0ee705b59f3bbb3ef.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/736x/6d/16/9d/6d169d1c2d18d9b0ee705b59f3bbb3ef.jpg</a></li>
             <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/736x/47/3e/ae/473eae8b873459c74640e000ae085b9a.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/736x/47/3e/ae/473eae8b873459c74640e000ae085b9a.jpg</a></li>
+            <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/736x/50/f1/7c/50f17c380525acf16c5ad8df185b1554.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/736x/50/f1/7c/50f17c380525acf16c5ad8df185b1554.jpg</a></li>
+            <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/736x/22/8b/72/228b72a03cb98c19063193cf0188a6a3.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/736x/22/8b/72/228b72a03cb98c19063193cf0188a6a3.jpg</a></li>
         </ul>
         </section>
 
