--- a/references.html
+++ b/references.html
@@ -145,6 +145,8 @@ nav img {
             <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/736x/47/3e/ae/473eae8b873459c74640e000ae085b9a.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/736x/47/3e/ae/473eae8b873459c74640e000ae085b9a.jpg</a></li>
             <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/736x/50/f1/7c/50f17c380525acf16c5ad8df185b1554.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/736x/50/f1/7c/50f17c380525acf16c5ad8df185b1554.jpg</a></li>
             <li>(2025). Pinimg.com. Retrieved from <a href="https://i.pinimg.com/736x/22/8b/72/228b72a03cb98c19063193cf0188a6a3.jpg" target="_blank" style="color:#D0C4B6;">https://i.pinimg.com/736x/22/8b/72/228b72a03cb98c19063193cf0188a6a3.jpg</a></li>
+            <li>Brown, R. (2023). The 10 Most Popular Coffee Drink Recipes: A Complete Guide. Weaverscoffee.com. Retrieved from <a href="https://weaverscoffee.com/blogs/blog/the-10-most-popular-coffee-drinks-you-should-try-a-complete-guide?srsltid=AfmBOopvJtUSZF10xr3caoAyWZ82Ja-Gf2mLuUPyd6BLOP1koMTxxqCB" target="_blank" style="color:#D0C4B6;">https://weaverscoffee.com/blogs/blog/the-10-most-popular-coffee-drinks-you-should-try-a-complete-guide</a></li>
+            <li>Digital Marketing. (2018, January 15). 11 Tips for Brewing Better Coffee at Home. Caffe Luxxe. Retrieved from <a href="https://www.caffeluxxe.com/blogs/news/11-tips-for-brewing-better-coffee-at-home#/" target="_blank" style="color:#D0C4B6;">https://www.caffeluxxe.com/blogs/news/11-tips-for-brewing-better-coffee-at-home#/</a></li>
         </ul>
         </section>
 
