--- a/tips.html
+++ b/tips.html
@@ -205,7 +205,7 @@ nav img {
                 </div>
             </nav>
 
-        <h1>Recipes</h1>
+        <h1>Tips</h1>
             
         </section>
 
@@ -214,25 +214,16 @@ nav img {
             <p>Click the images for more info!</p>
             <div class="roww">
                 <div class="preview-col">
-                    <a target="_blank" href="recipe1.html">
+                    <h3>Use fresh, whole beans</h3>
                     <img src="../CoffeeVere/img/la.jpg">
-                    </a>
-                    <h3>Caffè Latte</h3>
-                    <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
                 <div class="preview-col">
-                    <a target="_blank" href="recipe2.html">
-                    <img src="../CoffeeVere/img/espresso.jpg">
-                    </a>
-                    <h3>Espresso</h3>
-                    <p>A small, intense shot of concentrated coffee provides a rich, bold taste.</p>
+                    <h3>Measure with a scale</h3>
+                    <img src="../CoffeeVere/img/la.jpg">
                 </div>
                 <div class="preview-col">
-                    <a target="_blank" href="recipe3.html">
-                    <img src="../CoffeeVere/img/mocha.jpg">
-                    </a>
-                    <h3>Caffè Mocha</h3>
-                    <p>A creamy blend of coffee and cocoa topped with foam.</p>
+                    <h3>Right coffee-to-water ratio</h3>
+                    <img src="../CoffeeVere/img/la.jpg">
                 </div>
             </div>
             </div>
