--- a/tips.html
+++ b/tips.html
@@ -205,27 +205,20 @@ nav img {
                 </div>
             </nav>
 
-        <h1>Tips</h1>
+        <h1>Tips for brewing at home</h1>
             
         </section>
 
         <section class="preview">
-            <h1>Classics</h1>
-            <p>Click the images for more info!</p>
-            <div class="roww">
-                <div class="preview-col">
-                    <h3>Use fresh, whole beans</h3>
-                    <img src="../CoffeeVere/img/la.jpg">
+
+            <div class="container">
+                <div class="slider">
+                    <div class="card-list">
+                        <div class="card-item">
+
+                        </div>
+                    </div>
                 </div>
-                <div class="preview-col">
-                    <h3>Measure with a scale</h3>
-                    <img src="../CoffeeVere/img/la.jpg">
-                </div>
-                <div class="preview-col">
-                    <h3>Right coffee-to-water ratio</h3>
-                    <img src="../CoffeeVere/img/la.jpg">
-                </div>
-            </div>
             </div>
         </section>
 
