--- a/tips.html
+++ b/tips.html
@@ -15,6 +15,9 @@
 }
 
 body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #733636; 
 }
 
@@ -76,98 +79,10 @@ nav img {
     font-size: 60px;
 }
 
-.preview {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px;
-    color: white;
-}
-
-.roww {
-    display: flex;
-    justify-content: space-between; 
-    flex-wrap: wrap; 
-    gap: 20px; 
-}
-
-.preview-col {
-    flex: 1 1 30%; 
-    border-radius: 10px;
-    margin-bottom: 20px;
-    text-align: center; 
-}
-
-.preview-col img {
-    width: 100%; 
-    height: 600px; 
-    border-radius: 10px;
-}
-
-.preview h1 { 
-    margin-bottom: 10px; 
-    font-size: 35px;
-}
-
-.preview-col h3 {
-    margin-top: 15px;  
-    margin-bottom: 10px; 
-    font-size: 24px;
-    text-align: left;
-}
-
-.preview-col p {
-    margin-top: 0;
-    font-size: 16px;
-    line-height: 1.5;
-    text-align: left;
-}
-
-.fave {
-    position: relative;
-    margin: 100px auto;
-    width: 80%;
-    background-image: linear-gradient(rgba(56, 67, 113, 0.7),rgba(111, 127, 188, 0.7)), url("../CoffeeVere/img/o.jpg");
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
-    text-align: center;
-    padding: 100px 0;
-    color: #fff;
-    font-size: 25px;
-    overflow: hidden;
-}
-
-.fave-link {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    z-index: 2;
-    text-indent: -9999px;
-}
-
-.fave h1 {
-    position:relative;
-    z-index: 3;
-}
-
-.hero-btn {
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    border: 1px solid white;
-    padding: 12px 34px;
-    font-size: 24px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
-    margin-top: 20px;
-}
-
-.hero-btn:hover{
-    border: 1px solid #5C0B12;
-    background: #5C0B12;
-    transition: 1s;
+.card-list .card-item .user-image {
+    width: 150px;
+    height: 150px;
+    border-radius: 70%;
 }
 
 .footer {
@@ -215,16 +130,13 @@ nav img {
                 <div class="slider">
                     <div class="card-list">
                         <div class="card-item">
-
+                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
+                            <h2 class="tip-thing">Use fresh, whole beans</h2>
+                            <p class="tip-desc">Freshly roasted coffee beans help give the best flavor</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section class="fave">
-            <a href="personalfave.html" class="fave-link">Go to recipe</a>
-            <a href="personalfave.html" class="hero-btn"><h1>Personal Favorite</h1></a>
         </section>
 
         <section class="footer">
