--- a/tips.html
+++ b/tips.html
@@ -15,9 +15,6 @@
 }
 
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: #733636; 
 }
 
@@ -77,6 +74,12 @@ nav img {
 .sub-header h1 {
     margin-top: 85px;
     font-size: 60px;
+}
+
+.preview {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .card-list .card-item .user-image {
