--- a/tips.html
+++ b/tips.html
@@ -82,10 +82,26 @@ nav img {
     justify-content: center;
 }
 
+.card-list .card-item {
+    color:#fff;
+    width: 400px;
+    padding: 35px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    background: rgba(122, 133, 174, 0.2);
+    border: 1px solid rgba(122, 133, 174, 0.5)
+}
+
 .card-list .card-item .user-image {
     width: 150px;
     height: 150px;
-    border-radius: 70%;
+    border-radius: 80%;
+    margin-bottom: 40px;
+    border: 3px solid #fff;
+    padding: 4px;
 }
 
 .footer {
