--- a/tips.html
+++ b/tips.html
@@ -91,6 +91,7 @@ nav img {
     align-items: center;
     justify-content: center;
     border-radius: 8px;
+    backdrop-filter: blur(30px);
     background: rgba(122, 133, 174, 0.2);
     border: 1px solid rgba(122, 133, 174, 0.5)
 }
@@ -102,6 +103,13 @@ nav img {
     margin-bottom: 40px;
     border: 3px solid #fff;
     padding: 4px;
+}
+ 
+.card-list .card-item .tip-desc {
+    font-size: 1.15rem;
+    color: #e3e3e3;
+    font-weight: 500;
+    margin: 14px 0 40px;
 }
 
 .footer {
