--- a/tips.html
+++ b/tips.html
@@ -110,6 +110,7 @@ nav img {
     color: #e3e3e3;
     font-weight: 500;
     margin: 14px 0 20px;
+    text-align: center;
 }
 
 .footer {
@@ -159,7 +160,37 @@ nav img {
                         <div class="card-item">
                             <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
                             <h2 class="tip-thing">Use fresh, whole beans</h2>
-                            <p class="tip-desc">Freshly roasted coffee beans help give the best flavor</p>
+                            <p class="tip-desc">Freshly roasted coffee beans <br> help give the best flavor</p>
+                        </div>
+
+                        <div class="card-item">
+                            <img src="../CoffeeVere/img/scale.jpg" alt="Coffee-to-water ratio photo" class="user-image">
+                            <h2 class="tip-thing">Measure with a scale</h2>
+                            <p class="tip-desc">Weighing coffee is more accurate than scoops for consistency</p>
+                        </div>
+
+                        <div class="card-item">
+                            <img src="../CoffeeVere/img/cw.jpg" alt="Scale photo" class="user-image">
+                            <h2 class="tip-thing">Right coffee-to-water ratio</h2>
+                            <p class="tip-desc">Adjust the ratio to balance strength, sweetness, and body</p>
+                        </div> 
+
+                        <div class="card-item">
+                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
+                            <h2 class="tip-thing">Match grind to method</h2>
+                            <p class="tip-desc">Match grind size to brew method to avoid sourness or bitterness</p>
+                        </div>
+
+                        <div class="card-item">
+                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
+                            <h2 class="tip-thing">Use filtered water</h2>
+                            <p class="tip-desc">Filtered water makes a cleaner, smoother cup</p>
+                        </div>
+
+                        <div class="card-item">
+                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
+                            <h2 class="tip-thing">Keep experimenting</h2>
+                            <p class="tip-desc">Try new beans, ratios, and brews to learn</p>
                         </div>
                     </div>
                 </div>
