--- a/tips.html
+++ b/tips.html
@@ -176,19 +176,19 @@ nav img {
                         </div> 
 
                         <div class="card-item">
-                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
+                            <img src="../CoffeeVere/img/grind.jpg" alt="Coffee beans photo" class="user-image">
                             <h2 class="tip-thing">Match grind to method</h2>
                             <p class="tip-desc">Match grind size to brew method to avoid sourness or bitterness</p>
                         </div>
 
                         <div class="card-item">
-                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
+                            <img src="../CoffeeVere/img/water.jpg" alt="Coffee beans photo" class="user-image">
                             <h2 class="tip-thing">Use filtered water</h2>
                             <p class="tip-desc">Filtered water makes a cleaner, smoother cup</p>
                         </div>
 
                         <div class="card-item">
-                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
+                            <img src="../CoffeeVere/img/ex.jpg" alt="Coffee beans photo" class="user-image">
                             <h2 class="tip-thing">Keep experimenting</h2>
                             <p class="tip-desc">Try new beans, ratios, and brews to learn</p>
                         </div>
