--- a/tips.html
+++ b/tips.html
@@ -82,47 +82,34 @@ nav img {
 }
 
 .slider {
-  display: flex;
-  gap: 20px;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-  padding: 20px;
-}
+      display: flex;
+      gap: 20px;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+      scroll-behavior: smooth;
+      padding: 20px;
+    }
 
-.slider::-webkit-scrollbar {
-  display: none;
-}
+    .slider::-webkit-scrollbar {
+      display: none;
+    }
 
-.card-item {
-  flex: 0 0 300px;
-  scroll-snap-align: start;
-  background: rgba(122, 133, 174, 0.2);
-  border-radius: 8px;
-  padding: 25px;
-  color: #fff;
-  text-align: center;
-  border: 1px solid rgba(122, 133, 174, 0.5);
-}
+    .card-item {
+      flex: 0 0 300px;
+      scroll-snap-align: start;
+      background: linear-gradient(rgba(255, 255, 255, 0.2),rgba(255, 255, 255, 0.5));
+      border-radius: 8px;
+      padding: 20px;
+      text-align: center;
+    }
 
-.card-item img {
-  width: 150px;
-  height: 150px;
-  border-radius: 10%;
-  border: 3px solid #fff;
-  padding: 4px;
-  margin-bottom: 20px;
-}
-
-.card-item h2 {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-
-.card-item p {
-  font-size: 15px;
-  color: #e3e3e3;
-}
+    .card-item img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
 
 .footer {
     width: 100%;
