--- a/tips.html
+++ b/tips.html
@@ -76,60 +76,44 @@ nav img {
     font-size: 60px;
 }
 
+.slide-
+
 .preview {
-  margin: 50px auto;
-  max-width: 1000px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.slider {
-      width: 100%;
-      max-width: 700px;
-      height: 400px;
-      margin: auto;
-      overflow: hidden;
-      position: relative;
-      border-radius: 10px;
-    }
+.card-list .card-item {
+    color:#fff;
+    width: 400px;
+    padding: 35px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    backdrop-filter: blur(30px);
+    background: rgba(122, 133, 174, 0.2);
+    border: 1px solid rgba(122, 133, 174, 0.5)
+}
 
-    .slides {
-      display: flex;
-      width: 500%;
-      height: 100%;
-      animation: slide 20s infinite;
-    }
-
-    .card-item {
-      width: 100%;
-      flex: 1 0 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: rgba(255,255,255,0.1);
-      padding: 20px;
-      box-sizing: border-box;
-    }
-
-    .card-item img {
-      width: 250px;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 15px;
-      border: 3px solid #fff;
-    }
-
-    @keyframes card-item {
-      0% { margin-left: 0%; }
-      20% { margin-left: 0%; }
-      25% { margin-left: -100%; }
-      45% { margin-left: -100%; }
-      50% { margin-left: -200%; }
-      70% { margin-left: -200%; }
-      75% { margin-left: -300%; }
-      95% { margin-left: -300%; }
-      100% { margin-left: 0%; }
-    }
+.card-list .card-item .user-image {
+    width: 150px;
+    height: 150px;
+    border-radius: 10%;
+    margin-bottom: 40px;
+    border: 3px solid #fff;
+    padding: 4px;
+}
+ 
+.card-list .card-item .tip-desc {
+    font-size: 1.15rem;
+    color: #e3e3e3;
+    font-weight: 500;
+    margin: 14px 0 20px;
+    text-align: center;
+}
 
 .footer {
     width: 100%;
@@ -172,42 +156,44 @@ nav img {
 
         <section class="preview">
 
-            <div class="slider">
-                <div class="slides">
+            <div class="container">
+                <div class="slider">
+                    <div class="card-list">
                         <div class="card-item">
-                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" >
+                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
                             <h2 class="tip-thing">Use fresh, whole beans</h2>
                             <p class="tip-desc">Freshly roasted coffee beans <br> help give the best flavor</p>
                         </div>
 
                         <div class="card-item">
-                            <img src="../CoffeeVere/img/scale.jpg" alt="Coffee-to-water ratio photo">
+                            <img src="../CoffeeVere/img/scale.jpg" alt="Coffee-to-water ratio photo" class="user-image">
                             <h2 class="tip-thing">Measure with a scale</h2>
                             <p class="tip-desc">Weighing coffee is more accurate than scoops for consistency</p>
                         </div>
 
                         <div class="card-item">
-                            <img src="../CoffeeVere/img/cw.jpg" alt="Scale photo" >
+                            <img src="../CoffeeVere/img/cw.jpg" alt="Scale photo" class="user-image">
                             <h2 class="tip-thing">Right coffee-to-water ratio</h2>
                             <p class="tip-desc">Adjust the ratio to balance strength, sweetness, and body</p>
                         </div> 
 
                         <div class="card-item">
-                            <img src="../CoffeeVere/img/grind.jpg" alt="Coffee beans photo" >
+                            <img src="../CoffeeVere/img/grind.jpg" alt="Coffee beans photo" class="user-image">
                             <h2 class="tip-thing">Match grind to method</h2>
                             <p class="tip-desc">Match grind size to brew method to avoid sourness or bitterness</p>
                         </div>
 
                         <div class="card-item">
-                            <img src="../CoffeeVere/img/water.jpg" alt="Coffee beans photo" >
+                            <img src="../CoffeeVere/img/water.jpg" alt="Coffee beans photo" class="user-image">
                             <h2 class="tip-thing">Use filtered water</h2>
                             <p class="tip-desc">Filtered water makes a cleaner, smoother cup</p>
                         </div>
 
                         <div class="card-item">
-                            <img src="../CoffeeVere/img/ex.jpg" alt="Coffee beans photo">
+                            <img src="../CoffeeVere/img/ex.jpg" alt="Coffee beans photo" class="user-image">
                             <h2 class="tip-thing">Keep experimenting</h2>
                             <p class="tip-desc">Try new beans, ratios, and brews to learn</p>
+                        </div>
                     </div>
                 </div>
             </div>
