--- a/tips.html
+++ b/tips.html
@@ -76,43 +76,40 @@ nav img {
     font-size: 60px;
 }
 
-.slide-
-
 .preview {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+    padding: 50px;
+    gap: 40px;
 }
 
-.card-list .card-item {
+.column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.card-item {
     color:#fff;
-    width: 400px;
-    padding: 35px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     border-radius: 8px;
     backdrop-filter: blur(30px);
     background: rgba(122, 133, 174, 0.2);
-    border: 1px solid rgba(122, 133, 174, 0.5)
+    border: 1px solid rgba(122, 133, 174, 0.5);
 }
 
-.card-list .card-item .user-image {
-    width: 150px;
-    height: 150px;
+.card-item .user-image {
+    width: 120px;
+    height: 120px;
     border-radius: 10%;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     border: 3px solid #fff;
     padding: 4px;
-}
- 
-.card-list .card-item .tip-desc {
-    font-size: 1.15rem;
-    color: #e3e3e3;
-    font-weight: 500;
-    margin: 14px 0 20px;
-    text-align: center;
 }
 
 .footer {
@@ -155,46 +152,43 @@ nav img {
         </section>
 
         <section class="preview">
+  <div class="column">
+    <div class="card-item">
+      <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
+      <h2>Use fresh, whole beans</h2>
+      <p>Freshly roasted coffee beans help give the best flavor</p>
+    </div>
 
-            <div class="container">
-                <div class="slider">
-                    <div class="card-list">
-                        <div class="card-item">
-                            <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
-                            <h2 class="tip-thing">Use fresh, whole beans</h2>
-                            <p class="tip-desc">Freshly roasted coffee beans <br> help give the best flavor</p>
-                        </div>
+    <div class="card-item">
+      <img src="../CoffeeVere/img/scale.jpg" alt="Scale photo" class="user-image">
+      <h2>Measure with a scale</h2>
+      <p>Weighing coffee is more accurate than scoops for consistency</p>
+    </div>
 
-                        <div class="card-item">
-                            <img src="../CoffeeVere/img/scale.jpg" alt="Coffee-to-water ratio photo" class="user-image">
-                            <h2 class="tip-thing">Measure with a scale</h2>
-                            <p class="tip-desc">Weighing coffee is more accurate than scoops for consistency</p>
-                        </div>
+    <div class="card-item">
+      <img src="../CoffeeVere/img/cw.jpg" alt="Ratio photo" class="user-image">
+      <h2>Right coffee-to-water ratio</h2>
+      <p>Adjust the ratio to balance strength, sweetness, and body</p>
+    </div>
+  </div>
 
-                        <div class="card-item">
-                            <img src="../CoffeeVere/img/cw.jpg" alt="Scale photo" class="user-image">
-                            <h2 class="tip-thing">Right coffee-to-water ratio</h2>
-                            <p class="tip-desc">Adjust the ratio to balance strength, sweetness, and body</p>
-                        </div> 
+  <div class="column">
+    <div class="card-item">
+      <img src="../CoffeeVere/img/grind.jpg" alt="Grind photo" class="user-image">
+      <h2>Match grind to method</h2>
+      <p>Match grind size to brew method to avoid sourness or bitterness</p>
+    </div>
 
-                        <div class="card-item">
-                            <img src="../CoffeeVere/img/grind.jpg" alt="Coffee beans photo" class="user-image">
-                            <h2 class="tip-thing">Match grind to method</h2>
-                            <p class="tip-desc">Match grind size to brew method to avoid sourness or bitterness</p>
-                        </div>
+    <div class="card-item">
+      <img src="../CoffeeVere/img/water.jpg" alt="Water photo" class="user-image">
+      <h2>Use filtered water</h2>
+      <p>Filtered water makes a cleaner, smoother cup</p>
+    </div>
 
-                        <div class="card-item">
-                            <img src="../CoffeeVere/img/water.jpg" alt="Coffee beans photo" class="user-image">
-                            <h2 class="tip-thing">Use filtered water</h2>
-                            <p class="tip-desc">Filtered water makes a cleaner, smoother cup</p>
-                        </div>
-
-                        <div class="card-item">
-                            <img src="../CoffeeVere/img/ex.jpg" alt="Coffee beans photo" class="user-image">
-                            <h2 class="tip-thing">Keep experimenting</h2>
-                            <p class="tip-desc">Try new beans, ratios, and brews to learn</p>
-                        </div>
-                    </div>
+    <div class="card-item">
+      <img src="../CoffeeVere/img/ex.jpg" alt="Experiment photo" class="user-image">
+                    <h2>Keep experimenting</h2>
+                    <p>Try new beans, ratios, and brews to learn</p>
                 </div>
             </div>
         </section>
