--- a/recipe1.html
+++ b/recipe1.html
@@ -176,7 +176,7 @@ nav img {
                         <a href="https://youtu.be/UxwscVIZ8Qg?si=_rHIYwIr6fDmfg7R" class="hero-btn">Video Tutorial</a>
                </div>
                     <div class="r1-col">
-                    <img src="../CoffeeVere/img/l.jpg" alt="Latte photo">
+                    <img src="../CoffeeVere/img/fff.jpg" alt="Latte photo">
                 </div>
             </div>
         </section>
