--- a/recipes.html
+++ b/recipes.html
@@ -215,7 +215,7 @@ nav img {
             <div class="roww">
                 <div class="preview-col">
                     <a target="_blank" href="recipe1.html">
-                    <img src="../CoffeeVere/img/l.jpg">
+                    <img src="../CoffeeVere/img/fff.jpg">
                     </a>
                     <h3>Caffè Latte</h3>
                     <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
