--- a/tips.html
+++ b/tips.html
@@ -152,42 +152,40 @@ nav img {
         </section>
 
         <section class="preview">
-  <div class="column">
-    <div class="card-item">
-      <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
-      <h2>Use fresh, whole beans</h2>
-      <p>Freshly roasted coffee beans help give the best flavor</p>
-    </div>
+            <div class="column">
+                <div class="card-item">
+                <img src="../CoffeeVere/img/bs.jpg" alt="Coffee beans photo" class="user-image">
+                <h2>Use fresh, whole beans</h2>
+                <p>Freshly roasted coffee beans help give the best flavor</p>
+            </div>
 
-    <div class="card-item">
-      <img src="../CoffeeVere/img/scale.jpg" alt="Scale photo" class="user-image">
-      <h2>Measure with a scale</h2>
-      <p>Weighing coffee is more accurate than scoops for consistency</p>
-    </div>
+            <div class="card-item">
+            <img src="../CoffeeVere/img/scale.jpg" alt="Scale photo" class="user-image">
+            <h2>Measure with a scale</h2>
+            <p>Using a scale ensures accuracy</p>
+        </div>
 
-    <div class="card-item">
-      <img src="../CoffeeVere/img/cw.jpg" alt="Ratio photo" class="user-image">
-      <h2>Right coffee-to-water ratio</h2>
-      <p>Adjust the ratio to balance strength, sweetness, and body</p>
-    </div>
-  </div>
+            <div class="card-item">
+            <img src="../CoffeeVere/img/cw.jpg" alt="Ratio photo" class="user-image">
+            <h2>Right coffee-to-water ratio</h2>
+            <p>Adjust the ratio for ideal taste</p>
+        </div>
 
-  <div class="column">
-    <div class="card-item">
-      <img src="../CoffeeVere/img/grind.jpg" alt="Grind photo" class="user-image">
-      <h2>Match grind to method</h2>
-      <p>Match grind size to brew method to avoid sourness or bitterness</p>
-    </div>
+            <div class="card-item">
+            <img src="../CoffeeVere/img/grind.jpg" alt="Grind photo" class="user-image">
+            <h2>Match grind to method</h2>
+            <p>Match grind size to brew method to avoid sourness or bitterness</p>
+        </div>
 
-    <div class="card-item">
-      <img src="../CoffeeVere/img/water.jpg" alt="Water photo" class="user-image">
-      <h2>Use filtered water</h2>
-      <p>Filtered water makes a cleaner, smoother cup</p>
-    </div>
+            <div class="card-item">
+            <img src="../CoffeeVere/img/water.jpg" alt="Water photo" class="user-image">
+            <h2>Use filtered water</h2>
+            <p>Filtered water makes coffee taste fresher and purer</p>
+        </div>
 
-    <div class="card-item">
-      <img src="../CoffeeVere/img/ex.jpg" alt="Experiment photo" class="user-image">
-                    <h2>Keep experimenting</h2>
+            <div class="card-item">
+            <img src="../CoffeeVere/img/ex.jpg" alt="Experiment photo" class="user-image">
+                <h2>Keep experimenting</h2>
                     <p>Try new beans, ratios, and brews to learn</p>
                 </div>
             </div>
