--- a/tips.html
+++ b/tips.html
@@ -147,7 +147,7 @@ nav img {
                 </div>
             </nav>
 
-        <h1>Tips for brewing at home</h1>
+        <h1>Tips for creating the best cup at home</h1>
             
         </section>
 
